all project complet

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
         <div class="bati">
             <!-- left side  -->
             <div class="left_right">
-                <h2 class="
-                ">Hot Deal ! Sale Up To 25% Off</h2>
+                <h2 class="header2">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h2>
                 <p class="instruction">It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
                 <button class="btn_SignUp">Sign Up</button>
@@ -94,6 +93,50 @@
                 <img class="flower" src="images/pngwing 8.png" alt="">
             </div>
         </div>
+    </section>
+
+
+
+
+    <section class="fifth_section">
+        <div class="wtitten">
+            <h2 class="headline">Instagram</h2>
+            <p class="describe">It is a long established fact that a reader will be distracted by the readable content
+                of a page when looking at its layout.</p>
+        </div>
+
+        <div class="ful">
+            <img class="f1" src="images/Flower 01.png" alt="">
+            <img class="f2" src="images/Rectangle 4.png" alt="">
+            <img class="f3" src="images/Rectangle 5.png" alt="">
+            <img class="f4" src="images/Rectangle 6.png" alt="">
+        </div>
+    </section>
+
+
+
+
+
+
+    <section class="sixth_section">
+        <div class="write">
+            <h2 class="header_line">Get The Latest Deals</h2>
+            <p class="price">$30 coupon for first shopping</p>
+        </div>
+        <div class="background">
+            <input type="text" name="fname" id="name" placeholder="Enter your email here....">
+            <button class="sub">Subscribe</button>
+        </div>
+    </section>
+
+    <!-- footer sectio -->
+    <section class="footer_section">
+        <h1 style="font-size: 50px;">
+            <span style="color: #E55473;">Flowe</span>rShop
+        </h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+            at its layout.</p>
+        <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
     </section>
 </body>
 
