--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- footer sectio -->
     <section class="footer_section">
         <h1 style="font-size: 50px;">
-            <span style="color: #E55473;">Flowe</span>rShop
+            <span style="color: #E55473;">Flower</span>Shop
         </h1>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
             at its layout.</p>
